--- a/store.html
+++ b/store.html
@@ -7,21 +7,21 @@
     <meta name="apple-mobile-web-app-title" content="HOLLYS"/> 
     <meta name="description" content="할리스커피에서 영혼가지 힐링하는 음료를 만나보세요"/> 
     <meta property="og:title" content="할리스"> 
-    <meta property="og:url" content="wodn159159.dothome.co.kr "> 
-    <meta property="og:image" content="http://wodn159159.dothome.co.kr /og-img.png"> 
+    <meta property="og:url" content="http://pam7469.dothome.co.kr/"> 
+    <meta property="og:image" content="http://pam7469.dothome.co.kr/og-img.png"> 
     <meta property="og:description" content="할리스커피에서 영혼가지 힐링하는 음료를 만나보세요"/> 
     <meta name="twitter:card" content="summary"> 
     <meta name="twitter:title" content="할리스"> 
-    <meta name="twitter:url" content="http://wodn159159.dothome.co.kr .co.kr/"> 
-    <meta name="twitter:image" content="http://wodn159159.dothome.co.kr/og-img.png"> 
+    <meta name="twitter:url" content="http://pam7469.dothome.co.kr/"> 
+    <meta name="twitter:image" content="http://pam7469.dothome.co.kr/og-img.png"> 
     <meta name="twitter:description" content="할리스커피에서 영혼가지 힐링하는 음료를 만나보세요"/>
     
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/jquery.bxslider.css">
+    <!-- <link rel="stylesheet" href="./css/jquery.bxslider.css"> -->
     <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/default.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <!-- <link rel="stylesheet" href="./css/index.css"> -->
     <title>HOLLYS</title>
    
 </head>
@@ -116,79 +116,11 @@
                 </nav>
             </div>
         </header>
-        <section class="section main-slider">
-            <div class="container">
-                <div class="slider">
-                    <div><a href="#"><img src="./images/main-banner01.jpg" alt="메뉴1로 이동"></a></div>
-                    <div><a href="#"><img src="./images/main-banner02.jpg" alt="메뉴2로 이동"></a></div>
-                    <div><a href="#"><img src="./images/main-banner03.jpg" alt="메뉴3로 이동"></a></div>
-                    <div><a href="#"><img src="./images/main-banner04.jpg" alt="메뉴4로 이동"></a></div>
-                    <div><a href="#"><img src="./images/main-banner05.jpg" alt="메뉴5로 이동"></a></div>
-                    <div><a href="#"><img src="./images/main-banner06.jpg" alt="메뉴6로 이동"></a></div>
-                    <div><a href="#"><img src="./images/main-banner07.jpg" alt="메뉴7로 이동"></a></div>
-                    <div><a href="#"><img src="./images/main-banner08.jpg" alt="메뉴8로 이동"></a></div>
-                    <div><a href="#"><img src="./images/main-banner09.jpg" alt="메뉴9로 이동"></a></div>
-                </div>
-            </div>
+
+        <section class="section">
+            <h1>STORE</h1>
         </section>
-        <section class="section menu">
-            <div class="container">
-                <ul class="clearfix">                    
-                    <li>
-                        <a href="#">
-                            <img src="./images/img_main_menu01.gif" alt="hollys mall">
-                            <p>Hollys Mall</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/img_main_menu02.gif" alt="Menu">
-                            <p>Menu</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/img_main_menu03.gif" alt="store">
-                            <p>store</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="./images/img_main_menu04.gif" alt="membership">
-                            <p>membership</p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <section class="section banner">
-            <div class="container">
-                <ul>
-                    <li><a href="#"><img src="./images/img_banner01.jpg" alt="할리스 멤버십"></a></li>
-                    <li><a href="#"><img src="./images/img_banner02.jpg" alt="할리스 카드"></a></li>
-                    <li><a href="#"><img src="./images/img_banner03.jpg" alt="할리스 b2b"></a></li>
-                </ul>
-            </div>
-        </section>
-        <section class="section notice">
-            <div class="container">
-                <div class="notice-hd clearfix">
-                    <div class="notice-tit">Notice</div>
-                    <div class="notice-more">
-                        <a href="#">more</i></a>                        
-                        <i class="fa fa-play" aria-hidden="true"></i>
-                    </div>
-                </div>
-                <div class="notice-list clearfix">
-                    <div class="list-tit">
-                        <a href="#">멤버십 이용약관 변경 안내</a>
-                    </div>
-                    <div class="list-date">
-                        <a href="#">2021-09-29</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <footer class="footer">
             <div class="container">
                 <div class="footer-hd">
@@ -225,10 +157,10 @@
 
 
     <script src="./js/jquery-3.6.0.min.js"></script>
-    <script src="js/jquery.bxslider.js"></script>
+    <!-- <script src="js/jquery.bxslider.js"></script> -->
     <script>
         $(document).ready(function(){
-            $('.slider').bxSlider();
+            // $('.slider').bxSlider();
 
             // nav toggle event
             $('#btn-nav').click(function(){
